--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,8 @@
       <div class="page-header__wrapper active">
         <h1 class="visually-hidden">Travel2Buissnes - Регион сервиc</h1>
         <a href="#offer" class="page-header__logo logo">
-          <img class="logo__img" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
-          <img class="logo__img--dark active" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
+          <img class="logo__img" data-logo="blue" src="img/logo.svg" alt="Логотип компании - Travel2Buissnes">
+          <img class="logo__img--dark active" data-logo="red" src="img/logo-dark.svg" alt="Темный логотип компании - Travel2Buissnes">
         </a>
         <nav class="page-header__navigation nav">
           <ul class="nav__list" id="menu">
@@ -76,37 +76,37 @@
             <h2 class="offer-mobile__title">Наши услуги</h2>
             <div class="offer__icons we-can">
               <div class="we-can__item">
-                <svg width="32" height="32" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-hotel"></use>
                 <svg>
                 <p class="we-can__item-text">Размещение в гостиницах по России и за рубежом</p>
               </div>
               <div class="we-can__item">
-                <svg width="32" height="32" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-plane"></use>
                 <svg>
                 <p class="we-can__item-text">Авиабилеты и железнодорожные билеты</p>
               </div>
               <div class="we-can__item">
-                <svg width="68" height="30" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-car"></use>
                 <svg>
-                <p class="we-can__item-text">Транспортное<br> обслуживание</p>
+                <p class="we-can__item-text">Транспортное обслуживание</p>
               </div>
               <div class="we-can__item">
-                <svg width="32" height="32" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-case"></use>
                 <svg>
                 <p class="we-can__item-text">Организация деловых мероприятий (MICE)</p>
               </div>
               <div class="we-can__item">
-                <svg width="32" height="32" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-museum"></use>
                 <svg>
                 <p class="we-can__item-text">Культурно-развлекательные программы</p>
               </div>
               <div class="we-can__item">
-                <svg width="32" height="32" class="we-can__item-icon">
+                <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-corp"></use>
                 <svg>
                 <p class="we-can__item-text">Корпоративные обучающие программы </p>
@@ -231,8 +231,7 @@
               </div>
               <p class="review__text">«Для меня очень важно выбрать лучшее из
                предлагаемого и при этом не выйти за рамки бюджета. Я привык 
-               четко понимать, где и за что я плачу. Выбирая работу с компанией
-               Регион-сервис, я прежде всего выбираю качество, гибкую ценовую
+               четко понимать, где и за что я плачу. Выбирая работу с aгентством Travel2Buissnes, я прежде всего выбираю качество, гибкую ценовую
                политику и уверенность в том, что мне предложат оптимальный 
                вариант, подходящий под мои требования. А по итогу я еще получу
                сводную отчетность по всем предоставленным услугам»</p>
@@ -247,26 +246,37 @@
                   <img src="img/2.jpg" alt="#" width="70" height="70">
                 </div>
                 <div class="review__name name">
-                  <span class="name__item">Иван Сергеевич2</span>
-                  <span class="name__text">Генеральный директо</span>
+                  <span class="name__item">Ирина Владимировна</span>
+                  <span class="name__text">Бухгалтер</span>
                 </div>
               </div>
-              <p class="review__text">«Для меня очень важно выбрать лучшее из
-               предлагаемого и при этом не выйти за рамки бюджета. Я привык 
-               четко понимать, где и за что я плачу. Выбирая работу с компанией
-               Регион-сервис, я прежде всего выбираю качество, гибкую ценовую
-               политику и уверенность в том, что мне предложат оптимальный 
-               вариант, подходящий под мои требования. А по итогу я еще получу
-               сводную отчетность по всем предоставленным услугам»</p>
+              <p class="review__text">Сотрудничество с aгентством Travel2Buissnes позволило мне забыть о проблемах согласования форм отчетности, необходимости общаться с разными поставщиками. Я больше не беспокоюсь об изменениях в заказе, потому что знаю, все вопросы по корректировкам в документах Travel2Buissnes берет на себя.</p>
                <div class="review__name-mobile name">
-                <span class="name__item">Халк Несокрушимый</span>
-                <span class="name__text">Неуловимый мститель</span>
+                <span class="name__item">Ирина Владимировна</span>
+                <span class="name__text">Бухгалтер</span>
+              </div>
+            </div>
+            <div class="review__slide">
+              <div class="review__author">
+                <div class="review__img">
+                  <img src="img/2.jpg" alt="#" width="70" height="70">
+                </div>
+                <div class="review__name name">
+                  <span class="name__item">Светлана</span>
+                  <span class="name__text">Секретарь</span>
+                </div>
+              </div>
+              <p class="review__text">Мне не нужно тратить драгоценное рабочее время на долгие поиски подходящего варианта проживания или трансфера. Я просто сообщаю своему персональному менеджеру aгентства Travel2Buissnes что нам нужно, и занимаюсь дальше рабочими делами. Даже если у нас какой-то срочный заказ, это не будет проблемой. Кроме того, я всегда спокойна, так как знаю, что мне помогут в решении всех вопросов по моим заказам .
+              </p>
+               <div class="review__name-mobile name">
+                <span class="name__item">Светлана</span>
+                <span class="name__text">Секретарь</span>
               </div>
             </div>
           </div>
           <div class="review__toggle">
               <button id="jsSliderNext" type="button" class="review__toggle-btn review__toggle-btn--prev">
-                <svg width="14" height="30">
+                <svg width="50" height="50">
                   <use xlink:href="img/svg-sprite.svg#icon-left-arrow"></use>
                 </svg>
               </button>
@@ -274,7 +284,7 @@
                 <div id="result"></div>
               </div>
               <button id="jsSliderPrev" type="button" class="review__toggle-btn review__toggle-btn--next">
-                <svg width="14" height="30">
+                <svg width="50" height="50">
                   <use xlink:href="img/svg-sprite.svg#icon-right-arrow"></use>
                 </svg>
               </button>
@@ -307,19 +317,19 @@
         <div class="contacts__wrapper">
           <div class="contacts__item">
             <h2 class="contacts__title">Контакты</h2>
-            <p class="contacts__text"><span>Адрес</span>Санкт-Петербург,<br> ул.Профессора Попова д.23</p>
-            <a class="contacts__phone" href="tel:+78126221571">
-              <span>Телефон</span>+7 (812) 622 15 71</a>
-            <a class="contacts__email" href="mailto:info@travel2business.ru">
-              <span>e-mail</span>info@travel2business.ru</a>
+            <p class="contacts__text">Санкт-Петербург,<br> ул. Профессора Попова, д. 23</p>
+            <a class="contacts__phone" href="tel:+78126221571">+7 (812) 622 15 71</a>
+            <a class="contacts__email" href="mailto:info@travel2business.ru">info@travel2business.ru</a>
             <div class="contacts__social social">
               <ul class="social__list">
-                <li class="social__item"><a href="#" class="social__link social__link--vk">
+                <li class="social__item">
+                  <a href="www.vk.com/travel2business" target="_blank" class="social__link social__link--vk">
                   <svg width="35" height="20">
                     <use xlink:href="img/svg-sprite.svg#icon-vk"></use>
                   </svg>
                 </a></li>
-                <li class="social__item"><a href="#" class="social__link social__link--instagram">
+                <li class="social__item">
+                  <a href="www.instagram.com/travel2business" target="_blank" class="social__link social__link--instagram">
                   <svg width="22" height="22">
                     <use xlink:href="img/svg-sprite.svg#icon-instagram"></use>
                   </svg>
@@ -337,7 +347,7 @@
           </div>
           <div class="contacts__form form">
             <form id="call-back" class="form__inputs" action="#" method="post">
-              <h2 class="form__title">С радостью перезвоним!</h2>
+              <h2 class="form__title">Оставить заявку</h2>
               <h2 class="form__title-mobile">Оставить заявку</h2>
               <label class="form__lable" for="name">
                 <input class="form__input" type="text" id="name" placeholder="Ваше имя">
@@ -352,7 +362,7 @@
                 <textarea class="form__textarea" name="call-back" id="comment" rows="2"></textarea>
               </label>
               <input class="form__checkbox" id="agreement" type="checkbox">
-              <label class="form__check-lable" for="agreement">Принимаю политику конфиденциальности</label>
+              <label class="form__check-lable" for="agreement">Принимаю <a class="form__link" href="#">политику конфиденциальности</a></label>
               <button form="call-back" type="submit" class="form__button button">Отправить заявку</button>
             </form>
           </div>
