--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#000">
   <title>Travel2Buissnes - Регион сервиc</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.css">
 <!--   <link rel="stylesheet" href="css/libs.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
@@ -70,7 +70,7 @@
         <div class="offer__wrapper">
           <div class="offer__top">
             <h2 class="offer__title">Доверьте организацию деловых поездок профессионалам!</h2>
-            <a href="#" class="offer__link button">Узнать больше</a>
+            <a href="#advantages" class="offer__link button">Узнать больше</a>
           </div>
           <div class="offer__bottom">
             <h2 class="offer-mobile__title">Наши услуги</h2>
@@ -85,13 +85,13 @@
                 <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-plane"></use>
                 <svg>
-                <p class="we-can__item-text">Авиабилеты и железнодорожные билеты</p>
+                <p class="we-can__item-text">Авиабилеты<br>и железнодорожные билеты</p>
               </div>
               <div class="we-can__item">
                 <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-car"></use>
                 <svg>
-                <p class="we-can__item-text">Транспортное обслуживание</p>
+                <p class="we-can__item-text">Транспортное<br> обслуживание</p>
               </div>
               <div class="we-can__item">
                 <svg width="45" height="45" class="we-can__item-icon">
@@ -103,7 +103,7 @@
                 <svg width="45" height="45" class="we-can__item-icon">
                   <use xlink:href="img/svg-sprite.svg#icon-museum"></use>
                 <svg>
-                <p class="we-can__item-text">Культурно-развлекательные программы</p>
+                <p class="we-can__item-text">Культурно-развлекательные<br> программы</p>
               </div>
               <div class="we-can__item">
                 <svg width="45" height="45" class="we-can__item-icon">
@@ -133,7 +133,7 @@
                потребности при планировании деловой поездки и организации мероприятия любой
                 сложности. Наш опыт и профессионализм подтверждены не только годами работы,
                  но и тысячами довольных клиентов.</p>
-            <a href="#" class="about__link button">Стать клиентом</a>
+            <a href="#form" class="about__link button">Стать клиентом</a>
             </div>
           </div>
           <div class="about__right-col">
@@ -152,9 +152,9 @@
         <div class="advantages__wrapper">
           <div class="advantages__topline">
             <p class="advantages__teaser">С нами удобно и надежно. Индивидуальный
-             подход к каждому клиенту и готовность помочь в любую минуту.</p>
+             подход<br>к каждому клиенту и готовность помочь в любую минуту.</p>
              <p class="advantages__teaser-mobile">Наши преимущества</p>
-              <a href="#" class="advantages__button button">Отправить заявку</a>
+              <a href="#form" class="advantages__button button">Отправить заявку</a>
           </div>
           <div id="advantageSlider" class="advantages__list mobile-slider">
             <div class="mobile-slider__wrap">
@@ -163,26 +163,8 @@
                   <use xlink:href="img/svg-sprite.svg#icon-prof"></use>
                 </svg>
                 <h3 class="advantages__title">Профессиональный подход</h3>
-                <p class="advantages__text">Команда профессионалов в сфеределового
+                <p class="advantages__text">Команда профессионалов в сфере делового
                  туризма поможет в организации поездок ваших  сотрудников.</p>
-              </div>
-              <div class="advantages__item">
-                <svg width="50" height="50" class="advantages__img">
-                  <use xlink:href="img/svg-sprite.svg#icon-like"></use>
-                </svg>
-                <h3 class="advantages__title">Все услуги в «одном окне»</h3>
-                <p class="advantages__text">Экономия времени за счет коммуникации 
-                с одним поставщиком услуг по всем организационным вопросам.</p>
-              </div>
-            </div>
-            <div class="mobile-slider__wrap">
-              <div class="advantages__item">
-                <svg width="50" height="50" class="advantages__img">
-                  <use xlink:href="img/svg-sprite.svg#icon-time"></use>
-                </svg>
-                <h3 class="advantages__title">Персональный менеджер</h3>
-                <p class="advantages__text">Помощь и консультирование по вопросам 
-                выбора и бронирования услуг.</p>
               </div>
               <div class="advantages__item">
                 <svg width="50" height="50" class="advantages__img">
@@ -196,19 +178,37 @@
             <div class="mobile-slider__wrap">
               <div class="advantages__item">
                 <svg width="50" height="50" class="advantages__img">
+                  <use xlink:href="img/svg-sprite.svg#icon-like"></use>
+                </svg>
+                <h3 class="advantages__title">Все услуги в «одном окне»</h3>
+                <p class="advantages__text">Экономия времени за счет коммуникации 
+                с одним поставщиком услуг по всем организационным вопросам.</p>
+              </div>
+              <div class="advantages__item">
+                <svg width="50" height="50" class="advantages__img">
                   <use xlink:href="img/svg-sprite.svg#icon-noun"></use>
                 </svg>
                 <h3 class="advantages__title">Оптимизация затрат</h3>
                 <p class="advantages__text">Сокращение административных расходов 
                 заказчика за счет подбора оптимальных вариантов бронирования.</p>
               </div>
+            </div>
+            <div class="mobile-slider__wrap">
+              <div class="advantages__item">
+                <svg width="50" height="50" class="advantages__img">
+                  <use xlink:href="img/svg-sprite.svg#icon-time"></use>
+                </svg>
+                <h3 class="advantages__title">Персональный менеджер</h3>
+                <p class="advantages__text">Помощь и консультирование по вопросам 
+                выбора и бронирования<br>услуг.</p>
+              </div>
               <div class="advantages__item">
                 <svg width="50" height="50" class="advantages__img">
                   <use xlink:href="img/svg-sprite.svg#icon-wallet"></use>
                 </svg>
                 <h3 class="advantages__title">Удобная форма оплаты</h3>
-                <p class="advantages__text">Принимаем оплату наличными, б/нал, 
-                кредитными картами. Возможна отсрочка платежа.</p>
+                <p class="advantages__text">Принимаем оплату наличными,<br>б/нал, 
+                кредитными картами.<br>Возможна отсрочка платежа.</p>
               </div>
             </div>
           </div>
@@ -276,7 +276,7 @@
           </div>
           <div class="review__toggle">
               <button id="jsSliderNext" type="button" class="review__toggle-btn review__toggle-btn--prev">
-                <svg width="50" height="50">
+                <svg width="14" height="30">
                   <use xlink:href="img/svg-sprite.svg#icon-left-arrow"></use>
                 </svg>
               </button>
@@ -284,7 +284,7 @@
                 <div id="result"></div>
               </div>
               <button id="jsSliderPrev" type="button" class="review__toggle-btn review__toggle-btn--next">
-                <svg width="50" height="50">
+                <svg width="14" height="30">
                   <use xlink:href="img/svg-sprite.svg#icon-right-arrow"></use>
                 </svg>
               </button>
@@ -367,7 +367,7 @@
             </form>
           </div>
           <div class="contacts__map">
-            <img src="img/map.png" alt="Регион сервис - адрес">
+            <img src="img/map.jpg" alt="Регион сервис - адрес">
           </div>
         </div>
       </section>
